# LookSo.Jr

init_servo_motor/: init_servo_motor.ino
lookso/: lookso.ino  servo.cpp  servo.h
lookso_jr_core/: lookso_jr_controller.cpp  lookso_jr_controller.h  lookso_jr_core.ino  lookso_jr_core_config.h
lookso_jr_description/: CMakeLists.txt  package.xml
lookso_jr_description/launch/: lookso_jr_ctrl.launch  lookso_jr_rviz.launch
lookso_jr_description/meshes/: link1.stl  link2.stl  link3.stl  link4.stl  link5.stl
lookso_jr_description/rviz/: lookso_jr.rviz
lookso_jr_description/urdf/: lookso_jr.gazebo  lookso_jr.gazebo.xacro  lookso_jr.xacro
lookso_jr_gazebo/: CMakeLists.txt  package.xml
lookso_jr_gazebo/config/: position_controller.yaml
lookso_jr_gazebo/launch/: lookso_jr_gazebo.launch  position_controller.launch
lookso_jr_gazebo/src/: lookso_jr_test.cpp
lookso_jr_gazebo/world/: empty.world
lookso_jr_moveit/: .setup_assistant  CMakeLists.txt  package.xml
lookso_jr_moveit/config/: gazebo_lookso_jr.srdf
lookso_jr_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
luxo/Chain/c_open_manipulator_chain/: OpenManipulator_Chain.h  c_open_manipulator_chain.ino
luxo_jr_core/: luxo_jr_controller.cpp  luxo_jr_controller.h  luxo_jr_core.ino  luxo_jr_core_config.h  wheel_driver.cpp  wheel_driver.h
turtlebot3_core/: luxo_jr_controller.cpp  luxo_jr_controller.h  turtlebot3_core.ino  turtlebot3_core_config.h
